# GOST_CHAT

./: .gitignore  Bykova.json  Doronin.json  Doronina.json  Guseva.json  Kryukova.json  Kulikova.json  Moiseev.json  README.md  Romanov.json  Zimin.json  data.json  entrance.json  entrance_person.json  pubspec.yaml  user.txt
build-server-client-ssl-tcp-Desktop_Qt_6_1_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  client-gost  cmake_install.cmake  server-gost
build-server-gost-Desktop_Qt_6_1_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  client-gost  client-pubkey-client.pem  client-pubkey-server.pem  cmake_install.cmake  pubkey-server.pem  qtcsettings.cmake  server-gost  server-pubkey-client.pem  server-pubkey-server.pem
flutter-gost-chat/: README.md  pubspec.yaml
flutter-gost-chat/lib/: main.dart  test_code.dart  test_sign.dart
flutter-gost-chat/lib/dynamic_library/: dynamic_library_linux.dart
flutter-gost-chat/lib/src/: authorization_screen.dart  home_screen.dart  sign_in_screen.dart
flutter-gost-chat/lib/src/widgets/: ClipPath.dart
flutter-gost-chat/linux/: my_application.cc
flutter-gost-chat/linux/flutter/: generated_plugin_registrant.cc
flutter-gost-chat/plugin_global/: README.md
flutter-gost-chat/plugin_global/lib/: plugin_global.dart
flutter-gost-chat/plugin_linux/: README.md
flutter-gost-chat/plugin_linux/lib/: plugin_linux.dart
flutter-gost-chat/plugin_linux/linux/: CMakeLists.txt
flutter-gost-chat/plugin_linux/linux/include/: export.h  gost_chat.h
flutter-gost-chat/plugin_linux/linux/src/: check_password.cpp  logger.cpp  message.cpp  sign_in.cpp  user.cpp
flutter-gost-chat/plugin_linux/linux/src/send_server/: .gitignore  client-EVP-PKEY.cpp  client-gost-chat.cpp  send.cpp
flutter-gost-chat/plugin_linux/linux/src/send_server/EVP/: client_EVP_CIPHER_CTX.cpp  client_EVP_PKEY.cpp
lib/: main.dart  test_code.dart
lib/dynamic_library/: dynamic_library_linux.dart
lib/src/: authorization_screen.dart  home_screen.dart  sign_in_screen.dart
lib/src/widgets/: ClipPath.dart  about.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
plugin_global/: pubspec.yaml
plugin_global/test/: plugin_global_test.dart
plugin_linux/: pubspec.yaml
plugin_linux/linux/: CMakeLists.txt  plugin_linux_plugin.cc
plugin_linux/linux/include/: gost_chat.h
plugin_linux/linux/include/plugin_linux/: plugin_linux_plugin.h
plugin_linux/linux/include/src/: checking_bad_words.cpp  checking_json.cpp  create_data.cpp  logger.cpp  sign_in.cpp
plugin_linux/linux/include/src/data/: data.json
plugin_linux/linux/include/src/data/data_persons/: Bykova.json  Doronina.json  Guseva.json  Isaev.json  Kryukova.json  Moiseev.json  Mukhina.json  Myshkin.json  Naumova.json  Osipov.json  Pavlov.json  Romanov.json  Rybakova.json  Seliverstov.json  Vasiliev.json  Zimin.json  Zuev.json
plugin_linux/linux/include/src/send_server/: client-authorization.cpp  client-create-message.cpp  client-gost-chat.cpp  client-symmetric-key.cpp
plugin_linux/test/: plugin_linux_test.dart
server-client-gost/: CMakeLists.txt  client-gost.cpp  client-gost.h  json.hpp  send.cpp  server-gost.cpp  server-gost.h  server_send.cpp  servlet.cpp
server-client-gost/EVP/: EVP_CIPHER_CTX.cpp  EVP_MD_CTX.cpp  EVP_PKEY.cpp  client_EVP_CIPHER_CTX.cpp  client_EVP_MD_CTX.cpp  client_EVP_PKEY.cpp
server-client-gost/data/: check-json-data.cpp  create-json-data.cpp
server-client-gost/script/: server_create.sh
server-client-ssl-tcp/: CMakeLists.txt  EVP_CIPHER_CTX.cpp  client-gost.cpp  client-gost.h  client_EVP_PKEY.cpp  send.cpp  server-gost.cpp  server-gost.h  server_send.cpp  servlet.cpp  ssl.cpp
server-client-ssl-tcp/data/: check-json-data.cpp
server-gost/: CMakeLists.txt  EVP_CIPHER_CTX.cpp  EVP_PKEY.cpp  client-gost.cpp  client-gost.h  client_EVP_CIPHER_CTX.cpp  client_EVP_PKEY.cpp  client_ssl.cpp  send.cpp  server-gost.cpp  server-gost.h  server_send.cpp  servlet.cpp  ssl.cpp
server-gost/script/: cert_privatekey.sh
service-flutter-gost-chat/: CMakeLists.txt  server-gost.cpp  server-gost.h
test/: widget_test.dart
